# sigma-rs

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE_DIAGRAM.md  CLAUDE.md  Cargo.toml  DISTRIBUTED_ARROW_PLAN.md  Dockerfile  Makefile  PARSER_ARCHITECTURE.md  README.md  ROADMAP.md  RULE_ARCHITECTURE.md  build.rs  config.toml.example  deny.toml  docker-compose.yml  newplan.md  prod_ready.md  prompt.md  run.sh  rust_implementation_plan.md  sample_events.jsonl  sonar-project.properties  test-kafka-consumer.sh  test_events.jsonl  test_float.rs  zeek_dns_demo.rs
.github/: labeler.yml
.github/workflows/: README.md  ci.yml  enhanced-testing.yml  main.yml  performance-monitoring.yml  pr.yml  quality.yml  release.yml  security-comprehensive.yml  security.yml
benches/: basic_bench.rs  comprehensive_benchmarks.rs  consumer_benchmarks.rs  memory_optimization.rs  micro_benchmark.rs  optimized_pattern_benchmark.rs  performance_optimizations.rs  rule_matching.rs  sigma_benchmarks.rs  simple_benchmark.rs  simplified_benchmarks.rs  string_matching_optimization.rs  tree_evaluation.rs
deployment/: README.md
deployment/helm/sigma-rs/: Chart.yaml  values.yaml
deployment/k8s/base/: configmap.yaml  deployment.yaml  hpa.yaml  kustomization.yaml  podmonitor.yaml  rbac.yaml
docs/: API_REFERENCE.md  BENCHMARK_RESULTS.md  CI_CD_ARCHITECTURE.md  CONSUMER_IMPLEMENTATION_PLAN.md  FEATURE_GAPS.md  GO_RUST_COMPARISON.md  IMPLEMENTATION_ANALYSIS.md  LEXER_ARCHITECTURE.md  MIGRATION_CHECKLIST.md  MIGRATION_GUIDE.md  PARITY_ANALYSIS.md  PARITY_COMPLETE.md  PARITY_MATRIX.md  PARSER_PLAN.md  PERFORMANCE_GUIDE.md  PRODUCTION_TUNING.md  QA_REPORT.md  README_MERGED.md  RULE_IMPLEMENTATION_PLAN.md  RUST_CONVERSION_PLAN.md  TESTING_STRATEGY.md  memory.md  rust_advanced_features.md  rust_implementation_plan.md  rust_parser_architecture.md
examples/: README.md  benchmark_demo.rs  comprehensive_benchmark.rs  event_detector.rs  go_study_comparison.rs  optimized_engine_demo.rs  parallel_stream_detector.rs  rule_validator.rs  simple_detection.rs  stream_detector.rs
examples/common/: mod.rs
examples/data/: zeek_dns_logs.json
examples/data/dns_rules/: zeek_dns_suspicious.yml
examples/data/rules/: wmic_recon.yml
proto/: sigma.proto
rules/: selected_500_rules.txt
rust-implementation/: .tarpaulin.toml  BENCHMARK_RESULTS.md  Cargo.toml  PATTERN_ARCHITECTURE.md  PATTERN_IMPLEMENTATION_PLAN.md  README.md  TESTING_IMPLEMENTATION.md  TESTING_PLAN.md  test_results.txt
rust-implementation/.github/workflows/: test.yml
rust-implementation/benches/: basic_bench.rs  comprehensive_benchmarks.rs  consumer_benchmarks.rs  rule_matching.rs  sigma_benchmarks.rs  simplified_benchmarks.rs
rust-implementation/examples/: event_detector.rs  parallel_stream_detector.rs  rule_validator.rs  simple_detection.rs  stream_detector.rs  test_examples.sh
rust-implementation/examples/common/: mod.rs
rust-implementation/examples/data/: test_events.json
rust-implementation/scripts/: compatibility_test.sh  coverage.sh
rust-implementation/src/: error.rs  event.rs  lib.rs  matcher.rs
rust-implementation/src/ast/: mod.rs  nodes.rs
rust-implementation/src/consumer/: backpressure.rs  config.rs  consumer.rs  dlq.rs  metrics.rs  mod.rs  offset_manager.rs  retry.rs  shutdown.rs
rust-implementation/src/detection/: mod.rs
rust-implementation/src/event/: adapter.rs
rust-implementation/src/lexer/: error.rs  mod.rs  state.rs  token.rs
rust-implementation/src/parser/: error.rs  mod.rs  validate.rs
rust-implementation/src/pattern/: factory.rs  mod.rs  num_matcher.rs  string_matcher.rs  traits.rs
rust-implementation/src/rule/: logsource.rs  mod.rs  tags.rs
rust-implementation/src/service/: mod.rs
rust-implementation/src/tree/: builder.rs  mod.rs
rust-implementation/tests/: comprehensive_tests.rs  consumer_integration_test.rs  debug_lexer_wildcard.rs  debug_wildcard.rs  error_handling_test.rs  event_processing_test.rs  lexer_tests.rs  modifier_tests.rs  parser_debug.rs  parser_debug_detailed.rs  parser_tests.rs  property_tests.rs  sigma_compatibility_test.rs  test_debug.rs
rust-implementation/tests/compatibility/: mod.rs
rust-implementation/tests/consumer/integration/: end_to_end_test.rs  kafka_integration.rs
rust-implementation/tests/consumer/unit/: processor_test.rs
scripts/: check-kafka.sh  download-sigma-rules.sh  load_test.sh  setup-hooks.sh  setup-kafka.sh  start-service.sh  test_all.sh  test_kafka_setup.sh  test_service.sh  time_based_load_test.sh
src/: arrow_event.rs  engine.rs  error.rs  event.rs  json_to_arrow.rs  lib.rs  main.rs  matcher.rs  sigma.rs  telemetry.rs
src/aggregation/: config.rs  evaluator.rs  mod.rs  sliding_window.rs
src/ast/: mod.rs  nodes.rs  tiered_compiler.rs
src/consumer/: backpressure.rs  config.rs  consumer.rs  dlq.rs  error.rs  feature_wrapper.rs  metrics.rs  mod.rs  offset_manager.rs  processor.rs  retry.rs  shutdown.rs
src/engine/: mod.rs  optimized_batch_processor.rs
src/event/: builder.rs
src/lexer/: error.rs  mod.rs  state.rs  token.rs
src/parser/: error.rs  mod.rs  validate.rs
src/pattern/: arrow_string_matcher.rs  coercion.rs  escape.rs  factory.rs  grouped_matcher.rs  intern.rs  mod.rs  num_matcher.rs  security.rs  string_matcher.rs  test_escape.rs  traits.rs  whitespace.rs
src/result/: mod.rs
src/rule/: detection.rs  logsource.rs  mod.rs  tags.rs
src/ruleset/: mod.rs
src/service/: mod.rs
src/tree/: builder.rs  mod.rs
tests/: aggregation_tests.rs  comprehensive_tests.rs  consumer_integration_test.rs  debug_lexer_wildcard.rs  debug_wildcard.rs  error_handling_test.rs  error_injection_test.rs  event_processing_test.rs  lexer_tests.rs  lib.rs  modifier_tests.rs  parity_test.rs  parser_debug.rs  parser_debug_detailed.rs  parser_tests.rs  pattern_tests.rs  performance_optimization_tests.rs  property_tests.rs  rule_tests.rs  service_test.rs  sigma_compatibility_test.rs  string_optimization_validation.rs  test_debug.rs
tests/compatibility/: mod.rs
tests/consumer/: mod.rs
tests/consumer/integration/: end_to_end_test.rs  kafka_integration.rs  (+1 more)
(+17 files in other folders)
