[package]
name = "sigma-rs"
version = "2.0.0-nightly"
edition = "2021"
authors = ["Sigma-rs Contributors <contact@sigma-rs.io>"]
description = "High-performance Rust implementation of the Sigma rule engine for security event detection"
documentation = "https://docs.rs/sigma-rs"
homepage = "https://github.com/sigma-rs/sigma-rs"
repository = "https://github.com/sigma-rs/sigma-rs"
license = "Apache-2.0"
readme = "README.md"
keywords = ["sigma", "security", "detection", "rules", "event"]
categories = ["security", "parser-implementations", "network-programming"]
rust-version = "1.75.0"

[package.metadata.docs.rs]
all-features = true

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
# Core
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
regex = "1.10"
glob = "0.3"
thiserror = "2.0.12"
anyhow = "1.0"
chrono = { version = "=0.4.38", features = ["serde"] }

# Tokio Stack
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }
axum = { version = "0.8.4", features = ["macros", "json", "tracing"], optional = true }
tonic = { version = "0.11", features = ["transport", "tls"] }
async-stream = "0.3"
tokio-stream = { version = "0.1" }
prost = "0.12"
tower = { version = "0.4", features = ["timeout", "retry", "util"] }
tower-http = { version = "0.6", features = ["cors", "trace", "timeout"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# String Matching
aho-corasick = "1.1"

# Async
async-trait = "0.1"
futures = "0.3"
pin-project = "1.1"

# Kafka Client
rdkafka = { version = "0.36", features = ["tokio"], optional = true }

# Metrics
prometheus = { version = "0.14", optional = true }

# OpenTelemetry
opentelemetry = { version = "0.21", optional = true }
opentelemetry_sdk = { version = "0.21", optional = true, features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.14", optional = true }
opentelemetry-semantic-conventions = { version = "0.13", optional = true }
tracing-opentelemetry = { version = "0.22", optional = true }

# Feature Flags
once_cell = "1.19"
lazy_static = "1.5"

# Compression
flate2 = "1.0"

# Additional Dependencies
globset = "0.4"
rand = "0.8"
uuid = { version = "1.10", features = ["v4"] }
moka = { version = "0.12", features = ["future"] }
ipnetwork = "0.20"
jsonpath-rust = "1.0.2"

# System
sysinfo = "0.32"
num_cpus = "1.16"
parking_lot = "0.12"
crossbeam = "0.8"
rayon = "1.10"

# Additional dependencies
bytes = "1.5"
memmap2 = "0.9"
lru = "0.12"
dashmap = "6.1"
nom = "7.1"
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"

# SIMD acceleration
memchr = "2.7"  # SIMD string search
simd-json = { version = "0.13", features = ["serde_impl"] }
# num-traits for Arrow compatibility
num-traits = "0.2"
arrow = { version = "53.2.0", features = ["prettyprint", "json"] }
arrow-flight = "53.2.0"
datafusion = "43.0.0"
siphasher = "1.0"
parquet = "53.2.0"

# Platform-specific
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

# CLI
clap = { version = "4.5", features = ["derive"] }
yansi = "1.0.1"

# Serialization
byteorder = "1.5"
base64 = "0.22"
walkdir = "2.5.0"
indicatif = "0.17.11"

# Arrow ecosystem - using compatible versions

# Additional crates for zero-copy
# (moved to main dependencies section)

# Distributed consensus
openraft = { version = "0.9" }

# Testing Utilities (dev-dependencies)
[dev-dependencies]
criterion = { version = "0.6", features = ["html_reports"] }
pretty_assertions = "1.4"
proptest = "1.4"
tempfile = "3.10"
quickcheck = "1.0"
quickcheck_macros = "1.0"
serial_test = "3.0"
rstest = "0.24"

[build-dependencies]
tonic-build = "0.11"

[features]
default = []
kafka = ["dep:rdkafka"]
metrics = ["dep:prometheus"]
service = ["dep:axum"]
telemetry = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp", "dep:opentelemetry-semantic-conventions", "dep:tracing-opentelemetry"]
all = ["kafka", "metrics", "service", "telemetry"]

[[bench]]
name = "simplified_benchmarks"
harness = false

[[bench]]
name = "comprehensive_benchmarks"
harness = false

[[bench]]
name = "consumer_benchmarks"
harness = false

[[bench]]
name = "tree_evaluation"
harness = false

[[bench]]
name = "arrow_benchmarks"
harness = false

[[bench]]
name = "simd_engine_5m_benchmark"
harness = false

[[bench]]
name = "distributed_benchmarks"
harness = false

[[bench]]
name = "flight_throughput_benchmark"
harness = false

[[bench]]
name = "scaling_analysis_benchmark"
harness = false

[[bench]]
name = "network_analysis_benchmark"
harness = false

[[bench]]
name = "distributed_performance_validation"
harness = false

[[bench]]
name = "performance_validation_simple"
harness = false

[[bench]]
name = "optimized_pattern_benchmark"
harness = false

[[bench]]
name = "arrow_throughput_validation"
harness = false

[[bench]]
name = "simple_validation"
harness = false

[[bench]]
name = "zero_copy_benchmarks"
harness = false

[[bin]]
name = "sigma-rs"
path = "src/main.rs"

[[bin]]
name = "data_generator"
path = "src/bin/data_generator.rs"

[[bin]]
name = "engine"
path = "src/bin/engine.rs"

[[bin]]
name = "rule_analyzer"
path = "src/bin/rule_analyzer.rs"

[[bin]]
name = "test_arrow"
path = "src/bin/test_arrow.rs"

[[bin]]
name = "test_compiler"
path = "src/bin/test_compiler.rs"

[[bin]]
name = "test_runner"
path = "src/bin/test_runner.rs"

[[example]]
name = "rule_validator"
required-features = []

[[example]]
name = "event_detector"
required-features = []

[[example]]
name = "simple_detection"
required-features = []

[[example]]
name = "stream_detector"
required-features = ["kafka"]

[[example]]
name = "parallel_stream_detector"
required-features = ["kafka"]

[[example]]
name = "arrow_stream_detector"
required-features = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1

